# hackross

./: CMakeLists.txt  README.md  hackross.cpp  hackross.h  main.cpp
hackross/: CMakeLists.txt  CMakeSettings.json  hackross.cpp  hackross.h
tests/: CMakeLists.txt  test.cpp
